--- a/tests/drivers/build_all/sensor/spi.dtsi
+++ b/tests/drivers/build_all/sensor/spi.dtsi
@@ -323,3 +323,14 @@ test_spi_bme680: bme680@3c {
 	reg = <0x3c>;
 	spi-max-frequency = <0>;
 };
+
+test_spi_max31865: max31865@0 {
+	compatible = "maxim,max31865";
+	reg = <0x0>;
+	spi-max-frequency = <125000>;
+	resistance-at-zero = <100>;
+	resistance-reference = <430>;
+	low-threshold = <6579>;
+	high-threshold = <32767>;
+	filter-50hz;
+};
